--- a/html.css
+++ b/html.css
@@ -408,6 +408,10 @@ nav ul li a{
     
     .aimg p{
         text-align: center;
+         height: 30%;
+        width: auto;
+        margin: 0%;
+        padding: 0%;
     }
 
     .aimg p img{
